Project

General

Profile

Actions

Bug #55129

closed

client: get stuck forever when the forward seq exceeds 256

Added by Xiubo Li about 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client, kceph, libcephfs
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The type of 'num_fwd' in ceph 'MClientRequestForward' is 'int32_t',
while in 'ceph_mds_request_head' the type is '__u8'. So in case
the request bounces between MDSes exceeding 256 times, the client
will get stuck.

In this case it's ususally a bug in MDS and continue bouncing the
request makes no sense.

Teuthology test:

https://pulpito.ceph.com/vshankar-2022-03-24_09:22:49-fs-wip-vshankar-fscrypt-20220324-121321-testing-default-smithi/6757483/

Related ceph PR:

https://github.com/ceph/ceph/pull/45073


Related issues 4 (0 open4 closed)

Related to CephFS - Bug #55409: client: incorrect operator precedence in Client.ccResolvedXiubo Li

Actions
Copied to Linux kernel client - Bug #55130: kclient: get stuck forever when the forward seq exceeds 256ResolvedXiubo Li

Actions
Copied to CephFS - Backport #55345: quincy: client: get stuck forever when the forward seq exceeds 256ResolvedXiubo LiActions
Copied to CephFS - Backport #55346: pacific: client: get stuck forever when the forward seq exceeds 256ResolvedXiubo LiActions
Actions #2

Updated by Xiubo Li about 2 years ago

  • Copied to Bug #55130: kclient: get stuck forever when the forward seq exceeds 256 added
Actions #3

Updated by Xiubo Li about 2 years ago

  • Description updated (diff)
Actions #4

Updated by Venky Shankar about 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot about 2 years ago

  • Copied to Backport #55345: quincy: client: get stuck forever when the forward seq exceeds 256 added
Actions #6

Updated by Backport Bot about 2 years ago

  • Copied to Backport #55346: pacific: client: get stuck forever when the forward seq exceeds 256 added
Actions #7

Updated by Xiubo Li about 2 years ago

  • Related to Bug #55409: client: incorrect operator precedence in Client.cc added
Actions #8

Updated by Xiubo Li almost 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF